--- a/index.html
+++ b/index.html
@@ -136,6 +136,19 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div class="border">
+        <div class="small-div">
+          <small>shenixo</small>
+          <small>HNG 11</small>
+        </div>
+        <div class="social">
+          <small><span>Twitter:</span> @Hexagon969</small>
+          <small><span>Linkedin:</span> Olaseni Disu</small>
+          <small><span>Github:</span>  SheniXo</small>
+        </div>
+      </div>
+    </footer>
   </body>
   <script src="scriptsHng.js"></script>
 </html>
