--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <nav>
-        <h2 data-testId="slackDisplayName">SheniXo <span></span></h2>
+        <h2 data-testId="slackDisplayName" class="dispName">SheniXo <span></span></h2>
         <div class="timer">
           <span class="day" data-testId="currentDay"></span>
           <span class="time" data-testId="currentTimeUTC"></span>
